@@ -40,6 +40,11 @@
          </property>
          <column>
           <property name="text">
+           <string></string>
+          </property>
+         </column>
+         <column>
+          <property name="text">
            <string>Interface</string>
           </property>
          </column>
